--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }}</title>
+    <link rel="stylesheet" href="/css/fontawesome/css/all.css">
+    <link rel="stylesheet" href="/css/site.css">
 </head>
+
 <body>
     <div class="site">
         <header class="site-header">
-            <h1>
-                <a href="/">{{ site.title }}</a>
+            <div class="site-branding">
+                <h1>
+                    <a href="/">{{ site.title }}</a>
+                </h1>
                 <p>{{ site.description }}</p>
-                <nav>
-                    <ul>
-                        {% for page in site.pages %}
-                        {% if page.title %}
-                        <li><a href={{ page.url }}>{{ page.title }}</a></li>
-                        {% endif %}
-                        {% endfor %}
-                    </ul>
-                </nav>
-            </h1>
+            </div>
+
+
+            <nav class="nav">
+                <ul>
+                    {% for page in site.pages %}
+                    {% if page.title %}
+                    <li class="page-title-{{ page.title | slugify }}">
+                        <a href={{ page.url }} ></i>{{ page.title }}</a>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+                </ul>
+            </nav>
+
         </header>
+
+        <main class="site-main">{{ content }}</main>
     </div>
-    {{ content }}
 </body>
+
+<footer class="site site-footer">
+    <p>
+        {{ site.title }} &copy; All rights reserved!
+    </p>
+</footer>
+
 </html>
