--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -25,7 +25,7 @@
                     {% for page in site.pages %}
                     {% if page.title %}
                     <li class="page-title-{{ page.title | slugify }}">
-                        <a href={{ site.baseurl }}{{ page.url }} ></i>{{ page.title }}</a>
+                        <a href={{ page.url }} ></i>{{ page.title }}</a>
                     </li>
                     {% endif %}
                     {% endfor %}
