--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }}</title>
-    <link rel="stylesheet" href="./css/fontawesome/css/all.css">
-    <link rel="stylesheet" href="./css/site.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/fontawesome/css/all.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <header class="site-header">
             <div class="site-branding">
                 <h1>
-                    <a href="/">{{ site.title }}</a>
+                    <a href={{ site.baseurl }}>{{ site.title }}</a>
                 </h1>
                 <p>{{ site.description }}</p>
             </div>
@@ -25,7 +25,7 @@
                     {% for page in site.pages %}
                     {% if page.title %}
                     <li class="page-title-{{ page.title | slugify }}">
-                        <a href={{ page.url }} ></i>{{ page.title }}</a>
+                        <a href={{ site.baseurl }}{{ page.url }} ></i>{{ page.title }}</a>
                     </li>
                     {% endif %}
                     {% endfor %}
